# doc-studio

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts  start-backend.sh
doc/: 项目设计文档.md
doc-server/: .gitignore  build.gradle.kts  settings.gradle.kts
doc-server/doc-server-manager/: build.gradle.kts
doc-server/doc-server-start/: build.gradle.kts
doc-server/gradle/wrapper/: gradle-wrapper.properties
doc-web-app/: package-lock.json  package.json  vite.config.js
doc-web-app/src/: App.jsx
doc-web-app/src/components/AIChat/: AIChatPanel.jsx  AIChatPanel.module.css
doc-web-app/src/components/Editor/: DiagramNode.jsx  DiagramNode.module.css  ExcalidrawEditor.jsx  ExcalidrawEditor.module.css  MermaidRenderer.jsx  (+1 more)
doc-web-app/src/extensions/: DiagramExtension.js
doc-web-app/src/styles/: global.css
doc/业界Skills/: 业界优秀Skills.md
doc/功能模块/: web端设计文档.md  功能模块整体设计文档.md  客户端设计文档.md  服务端设计文档.md  资源库设计文档.md
doc/工具使用/: Skill使用及配置指南.md
doc/开发管理/: 在线文档系统主流程冒烟验收清单.md
doc/架构设计/: 在线文档系统技术架构与接口设计.md  项目设计文档.md
gradle/wrapper/: gradle-wrapper.properties.backup
memora-client/: README.md  index.html  package-lock.json  package.json
memora-client/src/: App.jsx
memora-client/src-tauri/: Cargo.toml  tauri.conf.json
memora-client/src-tauri/src/: main.rs
memora-client/src/styles/: global.css
memora-server/: build.gradle.kts
memora-web-app/: README.md  package.json  vite.config.js
memora-web-app/src/: App.jsx
memora-web-app/src/router/: index.jsx
memora-web-app/src/styles/: global.css
memora-web-app/src/utils/: user.js
(+82 files in other folders)
