[package]
name = "memora-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = "^1.5.0"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }

[build-dependencies]
tauri-build = "^1.5.0"
